trying to add gallery boxes

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 				<!-- Main -->
 					<section id="main">
 
-						<!-- Items -->
-							<div class="items">
-
+						<!-- Items Part 1-->
+							<div class="items" id="part1">
+									
 								<div class="item intro span-2">
-									<h1>Parallelism</h1>
-									<p>A responsive portfolio site<br />
+									<h1>D.E.N.R.</h1>
+									<p>Guide Site<br />
 									template by HTML5 UP</p>
 								</div>
-
+								<!-- Items Part 1
 								<article class="item thumb span-1">
 									<h2>You really got me</h2>
 									<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a>
@@ -68,12 +68,12 @@
 									<h2>The Spectators</h2>
 									<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a>
 								</article>
-
+								-->
 							</div>
 
-						<!-- Items -->
-							<div class="items">
-
+						<!-- Items Part 2-->
+							<div class="items" id="part2">
+								<!-- Footer 
 								<article class="item thumb span-3"><h2>Kingdom of the Wind</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
 								<article class="item thumb span-1"><h2>The Pursuit</h2><a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a></article>
 								<article class="item thumb span-2"><h2>Boundless</h2><a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a></article>
@@ -83,16 +83,18 @@
 								<article class="item thumb span-1"><h2>Different.</h2><a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a></article>
 								<article class="item thumb span-2"><h2>Kingdom of the Wind</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
 								<article class="item thumb span-1"><h2>Elysium</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
-
+								-->
 							</div>
-
+							
 					</section>
+
+					<button id="addItemButton">Add Item</button>
+
 
 				<!-- Footer -->
 					<section id="footer">
 						<section>
-							<p>This is <strong>Parallelism</strong>, a responsive portfolio site template by <a href="http://html5up.net">HTML5 UP</a>. Free for personal
-							and commercial use under the <a href="http://html5up.net/license">Creative Commons Attribution</a> license.</p>
+							<p>           </p>
 						</section>
 						<section>
 							<ul class="icons">
@@ -103,7 +105,7 @@
 								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Untitled</li><li>Design: <a href=" ">other link</a></li>
 							</ul>
 						</section>
 					</section>
