--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 									
 								<div class="item intro span-2">
 									<h1>D.E.N.R.</h1>
-									<p>Guide Site<br />
-									template by HTML5 UP</p>
+									<p>Customer Guide Site<br />
+									</p>
 								</div>
 								<!-- Items Part 1
 								<article class="item thumb span-1">
