--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 								</div>
 								<article class="item thumb span-1">
 									<h2>You really got me</h2>
-									<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a>
+									<a href="images/fulls/01.jpg" class="image">
+										<video width="320" height="240" controls>
+											<source src="videos/sample.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
+									</a>
 								</article>
 							</div>
 
