experiment for video

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 									<p>Customer Guide Site<br />
 									</p>
 								</div>
-								<article class="item thumb span-1">
+								<article class="item thumb span-1 video">
 									<h2>You really got me</h2>
 									<a href="images/fulls/05.jpg" class="image">
 										<video width="320" height="240" controls>
